# knulp_navigator

./: .gitignore  README.md
camera_model/: CMakeLists.txt
config_pkg/: CMakeLists.txt  package.xml
feature_tracker/: CMakeLists.txt
feature_tracker/src/: feature_tracker.cpp  feature_tracker.hpp  feature_tracker_node.cpp  parameters.cpp  parameters.hpp
global_planner/: CMakeLists.txt  package.xml
global_planner/src/: global_planner.cpp  global_planner.hpp  global_planner_node.cpp
install/: local_setup.sh  setup.sh
install/camera_model/share/camera_model/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/camera_model/share/camera_model/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake
install/feature_tracker/share/ament_index/resource_index/package_run_dependencies/: feature_tracker
install/feature_tracker/share/feature_tracker/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/feature_tracker/share/feature_tracker/cmake/: feature_trackerConfig.cmake
local_planner/: CMakeLists.txt  package.xml
local_planner/include/local_planner/: constraint_builder.hpp  costmap_handler.hpp  local_mpc.hpp  math_utils.hpp  mpc_utils.hpp  trajectory_utils.hpp  types.hpp
local_planner/src/: constraint_builder.cpp  costmap_handler.cpp  local_mpc.cpp  local_planner_node.cpp  test_local_planner_feeder.cpp  trajectory_utils.cpp
log/: latest_build
map_builder/: CMakeLists.txt  package.xml
map_builder/src/: map_builder_node.cpp
pose_graph/: CMakeLists.txt  package.xml
pose_graph/src/: pose_graph.cpp  pose_graph_node.cpp
pose_graph/src/utility/: CameraPoseVisualization.cpp
vins_estimator/: CMakeLists.txt  package.xml
vins_estimator/src/: estimator.cpp  estimator.hpp  estimator_node.cpp  feature_manager.cpp  feature_manager.hpp  parameters.cpp  parameters.hpp
vins_estimator/src/factor/: imu_factor.hpp  integration_base.hpp  marginalization_factor.cpp  marginalization_factor.hpp  pose_local_parameterization.cpp  pose_local_parameterization.hpp  projection_factor.cpp  projection_factor.hpp  projection_td_factor.cpp  projection_td_factor.hpp
vins_estimator/src/initial/: initial_aligment.cpp  initial_alignment.hpp  initial_ex_rotation.cpp  initial_ex_rotation.hpp  initial_sfm.cpp  initial_sfm.hpp  solve_5pts.cpp  solve_5pts.hpp
vins_estimator/src/utility/: CameraPoseVisualization.cpp  utility.cpp  utility.hpp  visualization.cpp  visualization.hpp
