<?xml version="1.0"?>
<package format="3">
  <name>local_planner</name>
  <version>0.0.1</version>
  <description>Local MPC-based planner using global path, costmap, and odometry.</description>

  <maintainer email="knulp@example.com">knulp</maintainer>
  <license>MIT</license>

  <!-- 빌드 도구 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS 의존성 -->
  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>

  <!-- Eigen3 (헤더 위주지만 명시적으로 선언) -->
  <build_depend>Eigen3</build_depend>
  <build_export_depend>Eigen3</build_export_depend>
  <exec_depend>Eigen3</exec_depend>

  <!-- OSQP는 선택 (ON으로 쓰고 싶으면 CMake에서 USE_OSQP=ON 설정하고, 필요하면 주석 해제) -->
  <!--
  <build_depend>osqp</build_depend>
  <exec_depend>osqp</exec_depend>
  -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

